# conda-smithy

./: .authors.yml  .coveragerc  .flake8  .git-blame-ignore-revs  .git_archival.txt  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  .pyrefly-baseline.json  .travis.yml  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  LICENSE  LICENSE.txt  LINTER.md  MANIFEST.in  README  README.md  TODO  bootstrap-obvious-ci-and-miniconda.py  configure_circle_ci.py  configure_feedstock.py  environment.yml  extract_licenses.bash  log_handler.rst  manage_feedstock  oryx-build-commands.txt  pyproject.toml  pytest.ini  requirements.txt  rever.xsh  setup.cfg  setup.py  test_configure_feedstock.py  versioneer.py
.circleci/: config.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  auto-merge.yaml  dependabot.yml
.github/workflows/: _proxy-file-for-dependabot-tests.yml  pre-commit.yml  tests.yml
appveyor/: setup_x64.bat
conda_smithy/: __init__.py  _version.py  anaconda_token_rotation.py  azure_ci_utils.py  azure_defaults.py  ci_register.py  ci_skeleton.py  cirun_utils.py  cli.py  conda_smithy.py  config_file_helpers.py  configure_circle_ci.py  configure_feedstock.py  deprecations.py  feedstock_deploy_keys.py  feedstock_io.py  feedstock_outputs.py  feedstock_tokens.py  feedstocks.py  github.py  license_exceptions.txt  licenses.txt  lint_artifact.py  lint_conda_forge.py  lint_recipe.py  linters_forge_yml.py  linters_meta_yaml.py  linting_types.py  linting_utils.py  mamba_wrapper.py  osi_licenses.txt  pinning.json  plugin.py  rattler_build.py  rattler_linter.py  schema.py  skeleton.py  update_cb3.py  update_pinning.py  utils.py  (+2 more)
conda_smithy.recipe/: meta.yaml
conda_smithy/data/: README.txt  conda-forge.json  conda-forge.v2.json  conda-forge.v2.yml  conda-forge.yml  linter-messages.json  rattler-recipe-schema.json
conda_smithy/feedstock_content/: .gitattributes  .gitignore  LICENSE  LICENSE.txt  README  build-locally.py  build-locally.xsh  circle.yml
conda_smithy/feedstock_content/.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
conda_smithy/feedstock_content/.scripts/: logging_utils.sh
conda_smithy/feedstock_content/ci_support/: checkout_merge_commit.sh  (+1 more)
conda_smithy/linter/: conda_recipe_v1_linter.py  conda_recipe_v2_linter.py  errors.py  hints.py  license_exceptions.txt  licenses.txt  linter.py  lints.py  messages.py  rattler_linter.py  utils.py
conda_smithy/pinning/: __init__.py  pinning_utils.py
conda_smithy/rattler_build/: build.py  loader.py  utils.py
conda_smithy/schema/: choices.py  conda-forge.defaults.yml  conda-forge.schema.json  conda-forge.schema.yml  models.py  platforms.py  providers.py  test_schema.json
conda_smithy/templates/: .cirun.yml.tmpl  README.md.tmpl  README.tmpl  SetPageFileSize.ps1.tmpl  appveyor.yml.tmpl  automerge.yml.tmpl  azure-pipelines-linux.yml.tmpl  azure-pipelines-new-recipe-linux.yml.tmpl  azure-pipelines-new-recipe-osx.yml.tmpl  azure-pipelines-new-recipe-win.yml.tmpl  azure-pipelines-new-recipe.yml.tmpl  azure-pipelines-osx.yml.tmpl  azure-pipelines-win.yml.tmpl  azure-pipelines.yml.tmpl  build_and_run.sh.tmpl  build_singularity_steps.sh.tmpl  build_steps.sh.tmpl  build_steps_new_recipe.sh.tmpl  build_utils.py.tmpl  circle.yml.tmpl  conda-forge.yml.ci-skel.tmpl  create_conda_build_artifacts.bat.tmpl  create_conda_build_artifacts.sh.tmpl  create_pagefile.bat.tmpl  create_pagefile.sh.tmpl  docker_build_matrix.tmpl  docker_build_script.sh.tmpl  drone.yml.tmpl  fast_finish_ci_pr_build.sh.tmpl  free_disk_space.sh.tmpl  github-actions.tmpl  github-actions.yml.tmpl  jenkinsfile.tmpl  main.yml  main.yml.tmpl  meta.yaml.ci-skel.tmpl  pixi.toml.tmpl  recipes_README.md.tmpl  run_docker_build.sh.tmpl  run_docker_build.tmpl  (+14 more)
conda_smithy/tests/: test_configure_feedstock.py  test_encrypt.py  test_feedstock_io.py  test_lint_recipe.py
feedstock_content/: .gitignore  README  circle.yml
feedstock_content/ci_support/: upload_or_check_non_existence.py
news/: 1254_rerender_missing_recipe_dir_from_config.rst  1678-conda-calver.rst  1679-fix-ci  1703-cirun-self-hosted.rst  1726-undefined-null-str  1732-conda-build-options  1752-readme-channels.rst  1756-schema.rst  1761-unify-windows-scripts.rst  1762-conda-install-tool  1763-catch-negative-exit-code  1764-migration-additional_zip_keys.rst  1769-fix-additional_zip_keys  1769-fix-additional_zip_keys.rst  1770-feedstock-name  1771-conda-uninstall  1772-hints-from-pinning.rst  1774-update-names  1775-quotes  1776-pins  1783_Azure_disk_cleaning_opts.rst  1839-gha-checkout.rst  1840-stdlib-jinja.rst  1844-conda_build_tool-conda-build  1849-not-broken-up-to-date.rst  1854-use-azure-owner-in-url-for-missing-token-error-message.rst  1859-avoid-conda-subcommand-plugin.rst  1862-botconfig-docs.rst  1868-address-conda-build-deprecations  1871-build-id-azure.rst  1872-apple-silicon-gha.rst  1873-bot-config-skip-render.rst  1877-union-lists.rst  1878-skip-render.rst  1885-do-not-raise-on-validation-errors.rst  1886-prettier-lints.rst  1888-ensure-stdlib-renders-correctly.rst  1889-merge-c_stdlib_version-and-MACOSX_DEPLOYMENT_TARGET-on-osx.rst  1891-disabled-bot-inspection.rst  1892-drop-support-inspection-false.rst  (+755 more)
scripts/: conda-smithy
templates/: README.tmpl  appveyor.yml.tmpl  run_docker_build.tmpl  run_docker_build_matrix.tmpl  travis.yml.tmpl
tests/: conda-forge.yml  conftest.py  test_anaconda_token_rotation.py  test_ci_skeleton.py  test_cli.py  test_condaforge_config_schema.py  test_config_file_helpers.py  test_configure_feedstock.py  test_feedstock_io.py  test_feedstock_outputs.py  test_feedstock_tokens.py  test_github.py  test_lint_artifact.py  test_lint_recipe.py  test_linter_messages_registry.py  test_linters_forge_yml.py  test_linters_meta_yaml.py  test_perms.py  test_rerender_permissions.py  test_schema.py  test_utils.py  test_v1_linter_staging.py  test_variant_algebra.py
tests/__snapshots__/: test_anaconda_token_rotation.ambr  test_ci_skeleton.ambr  test_cli.ambr  test_configure_feedstock.ambr  test_feedstock_tokens.ambr  test_lint_recipe.ambr  test_variant_algebra.ambr
(+111 files in other folders)
