[build-system]
requires = [
    "setuptools>=70",
    "setuptools_scm>=7",
    "tomli>=1.0.0; python_version < '3.11'",
]
build-backend = "setuptools.build_meta"

[project]
name = "conda-smithy"
authors = [
    {name = "Phil Elson", email = "pelson.pub@gmail.com"},
]
description = "A package to create repositories for conda recipes, and automate their building with CI tools on Linux, OSX and Windows."
dynamic = ["version"]
requires-python = ">=3.9"

[project.urls]
home = "https://github.com/conda-forge/conda-smithy"

[project.scripts]
feedstocks = "conda_smithy.feedstocks:main"
conda-smithy = "conda_smithy.cli:main"

[tool.setuptools]
packages = ["conda_smithy"]
zip-safe = false
include-package-data = true

[tool.setuptools_scm]
write_to = "conda_smithy/_version.py"
write_to_template = "__version__ = '{version}'"

[tool.black]
# matches black's default value
line-length = 88

[tool.ruff.lint]
ignore = [
    "E501",  # https://docs.astral.sh/ruff/faq/#is-the-ruff-linter-compatible-with-black
    "E731",  # lambdas are useful
]
select = [
    # pyflakes
    "F",
    # pycodestyle
    "E", "W",
    # isort
    "I",
    # pep8-naming
    "N",
    # pypugrade
    "UP",
    # flake8-logging-format
    "G",
    # flake8-tidy-imports
    "TID",
]
isort.known-first-party = ["conda_smithy"]
flake8-tidy-imports.ban-relative-imports = "all"

[tool.pytest.ini_options]
norecursedirs = [
    "tests/recipes",
    ".*",
    "*.egg*",
    "build",
    "dist",
    "conda-smithy.recipe",
]
addopts = "--ignore conda_smithy --tb native --strict-markers --durations=20"
markers = [
    "legacy_circle: Test designed to run as if prior to the azure migration",
    "legacy_travis: Test designed to run as if prior to the azure migration",
    "legacy_appveyor: Test designed to run as if prior to the azure migration",
    "cli: CLI tests outside of test/test_cli.py",
]
