[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "conda-smithy"
authors = [
    {name = "Phil Elson", email = "pelson.pub@gmail.com"},
]
description = "A package to create repositories for conda recipes, and automate their building with CI tools on Linux, OSX and Windows."
dynamic = ["version"]
requires-python = ">=3.11"
license = "BSD-3-Clause"
license-files = ["LICENSE.txt"]

[project.urls]
home = "https://github.com/conda-forge/conda-smithy"

[project.scripts]
feedstocks = "conda_smithy.feedstocks:main"
conda-smithy = "conda_smithy.cli:main"

[project.entry-points.conda]
conda-smithy = "conda_smithy.plugin"

[tool.setuptools]
packages = ["conda_smithy"]
include-package-data = true

[tool.setuptools_scm]
write_to = "conda_smithy/_version.py"
write_to_template = "__version__ = '{version}'"

[tool.ruff]
# Mention default explicitly
line-length = 88

[tool.ruff.lint]
ignore = [
    "E501",  # line length is enforced by the formatter
    "E731",  # lambdas are useful
    # part of migration to Python 3.11, to be resolved in a separate PR
    "UP007",  # `typing.Union[A, B]` -> `A | B`
    "UP045",  # `typing.Optional[A]` -> `A | None`
]
select = [
    # pyflakes
    "F",
    # pycodestyle
    "E", "W",
    # isort
    "I",
    # pep8-naming
    "N",
    # pypugrade
    "UP",
    # flake8-logging-format
    "G",
    # flake8-tidy-imports
    "TID",
]
isort.known-first-party = ["conda_smithy"]
flake8-tidy-imports.ban-relative-imports = "all"

[tool.pytest.ini_options]
norecursedirs = [
    "tests/recipes",
    ".*",
    "*.egg*",
    "build",
    "dist",
    "conda-smithy.recipe",
]
addopts = "--ignore conda_smithy --tb native --strict-markers --durations=20"
markers = [
    "legacy_circle: Test designed to run as if prior to the azure migration",
    "legacy_travis: Test designed to run as if prior to the azure migration",
    "legacy_appveyor: Test designed to run as if prior to the azure migration",
    "cli: CLI tests outside of test/test_cli.py",
]
